bestaande code voor het registreren naar mvc pattern veranderd

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,5 +2,8 @@ RewriteEngine on
 RewriteCond %{REQUEST_URI} !\.(?:css|js|jpe?g|gif|png)$ [NC]
 RewriteRule ^api\/([a-zA-Z0-9\-\_\/]*)$ api.php?p=$1 [QSA]
 
+RewriteCond %{REQUEST_URI} !\.(?:css|js|jpe?g|gif|png)$ [NC]
+RewriteRule ^([a-zA-Z0-9\-\_\/]*)$ index.php?p=$1 [QSA]
+
 RewriteCond %{REQUEST_URI}/static/$1 -f
 RewriteRule ^(.*)$ static/$1 [L]
